--- a/views/auth/resetPassword.ejs
+++ b/views/auth/resetPassword.ejs
@@ -71,7 +71,7 @@
                                         <input type="hidden" value="<%= token%>" name="token" />
 
                                         <div class="form-group">
-                                            <label for="password" class="required"><%= lingua.password%></label>
+                                            <label for="password" class="required"><%= lingua.user.password.name></label>
 
                                             <input type="password" id="password" name="password" autocomplete="off"
                                                 class="form-control mb-3 form-control-lg"
