--- a/views/user/notifications.ejs
+++ b/views/user/notifications.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Notifications </title>
+    <title><%= lingua.notifications%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -44,7 +44,8 @@
                                         <div class="card-body">
                                             <div class="d-sm-flex justify-content-between align-items-start">
                                                 <div>
-                                                    <h4 class="card-title card-title-dash">My Notifications</h4>
+                                                    <h4 class="card-title card-title-dash"><%= lingua.myNotifications%>
+                                                    </h4>
                                                 </div>
                                             </div>
                                             <br>
@@ -52,8 +53,8 @@
                                                 <table id="notifications-table" class="table table-hover">
                                                     <thead>
                                                         <tr>
-                                                            <th>Notification</th>
-                                                            <th>Date</th>
+                                                            <th><%= lingua.notification%></th>
+                                                            <th><%= lingua.date%></th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
