--- a/views/auth/createSubs.ejs
+++ b/views/auth/createSubs.ejs
@@ -56,11 +56,12 @@
                                             <%- include('../cars/formFields.ejs', {allMakes, car: null}); %>
                                             <div class="col-lg-12">
                                                 <div class="form-group">
-                                                    <label for="product" class="required">Membership</label>
+                                                    <label for="product"
+                                                        class="required"><%= lingua.membership.name%></label>
 
                                                     <select id="product" name="product" required autofocus
                                                         class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-                                                        <option value="">Select One</option>
+                                                        <option value=""><%= lingua.selectOne%></option>
                                                         <% for(const price of prices) { %>
                                                         <option value="<%= price.id%>" name="<%= price.product.name%>"
                                                             price="<%= price.unit_amount%>">
@@ -74,8 +75,8 @@
                                         <div class="row">
                                             <div class="mt-3">
                                                 <button id="addSub" type="submit"
-                                                    class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"><%= lingua.add%>
-                                                    Car</button>
+                                                    class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end">
+                                                    <%= lingua.car.add%></button>
                                             </div>
                                         </div>
                                     </form>
@@ -85,22 +86,22 @@
                         <div class="col-sm-12 col-md-12 col-lg-8 mb-3">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="card-title"> My Cart</h4>
+                                    <h4 class="card-title"> <%= lingua.myCart%></h4>
                                     <div class="table-responsive">
                                         <table id="cart-table" class="table table-hover">
                                             <thead>
                                                 <tr>
-                                                    <th>Car</th>
-                                                    <th>Product</th>
-                                                    <th>Price</th>
-                                                    <th>Action</th>
+                                                    <th><%= lingua.car.name%></th>
+                                                    <th><%= lingua.car.product%></th>
+                                                    <th><%= lingua.membership.price%></th>
+                                                    <th><%= lingua.action%></th>
                                                 </tr>
                                             </thead>
                                             <tbody id="tbody"></tbody>
                                             <tfoot>
                                                 <tr>
                                                     <th></th>
-                                                    <th style="text-align:right">Sub Total:</th>
+                                                    <th style="text-align:right"><%= lingua.membership.subTotal%>:</th>
                                                     <th></th>
                                                     <th></th>
                                                 </tr>
@@ -113,8 +114,7 @@
                                             email="<%- user.email%>"
                                             class="btn btn-block btn-checkout btn-lg font-weight-medium auth-form-btn float-end"
                                             type="submit">
-                                            <%# lingua.create%>
-                                            Proceed to Checkout
+                                            <%= lingua.membership.proceedToCheckout%>
                                         </button>
                                     </div>
                                 </div>
@@ -210,15 +210,15 @@
                     }),
                 }).done(function (result) {
                     if (result.existingCar) {
-                        document.getElementById("carPlate").setCustomValidity("Existing Car Plate");
+                        document.getElementById("carPlate").setCustomValidity("<%= lingua.car.existingCar%>");
                         document.getElementById("carPlate").reportValidity();
-                        let reportMessage = `<p class="error"> Existing Car Plate in the system. Please provide another plate.</p>`
+                        let reportMessage = `<p class="error"><%= lingua.car.existingCar%>.</p>`
                         showResult('#plateValidationResult', reportMessage);
 
                     } else {
                         console.log("newItem: " + newItem);
                         showResult('#plateValidationResult',
-                            `<p class="success"> Valid Car Plate</p>`);
+                            `<p class="success"><%= lingua.car.validCar%></p>`);
 
                         addDataToTable(newItem);
                         // Clear all elements on form for next submit.
