--- a/views/auth/resetPasswordRequest.ejs
+++ b/views/auth/resetPasswordRequest.ejs
@@ -66,7 +66,7 @@
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
-                                            <label class="required" for="email"><%= lingua.email%></label>
+                                            <label class="required" for="email"><%= lingua.user.email%></label>
                                             <input type="email" id="email" name="email"
                                                 class="form-control form-control-lg" placeholder="example@gmail.com"
                                                 required />
