--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Create Car </title>
+    <title><%= lingua.car.add%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -45,24 +45,25 @@
                                 <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <h4>Create Car</h4>
+                                            <h4><%= lingua.car.add%></h4>
                                             <form id="form-create-car" class="pt-3" action="/cars/create" method="post">
                                                 <input id="userID" name="userID" value="<%= user.id%>" hidden />
                                                 <div class="row">
                                                     <% if(siToAddCar.length > 0) { %>
                                                     <div class="col-lg-12">
                                                         <div class="form-group">
-                                                            <label for="subItem" class="required">Membership to add a
-                                                                Car</label>
+                                                            <label for="subItem"
+                                                                class="required"><%= lingua.car.membershipToAddCar%></label>
 
                                                             <select id="subItem" name="subItem" required autofocus
                                                                 class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-                                                                <option value="">Select One</option>
+                                                                <option value=""><%= lingua.selectOne%></option>
                                                                 <% for(item of siToAddCar) { %>
 
                                                                 <% var selected = (item.data.id === itemID) ? "selected" : ""; %>
 
-                                                                <option value="<%= item.data?.subscription%>/<%= item.data.id%>"
+                                                                <option
+                                                                    value="<%= item.data?.subscription%>/<%= item.data.id%>"
                                                                     <%= selected%>>
                                                                     <%= item.data.price.product.name%>
                                                                     (<%= moment(item?.data?.created).isValid() ? moment(item.data?.created * 1000).format(completeDateFormat) : 'N/A' %>)
@@ -79,11 +80,11 @@
                                                     <div class="mt-3">
 
                                                         <a href="/cars"
-                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
+                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end"><%= lingua.cancel%></a>
 
                                                         <button
                                                             class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                                            type="submit">Save</button>
+                                                            type="submit"><%= lingua.save%></button>
                                                     </div>
                                                 </div>
                                             </form>
