--- a/views/cars/formFields.ejs
+++ b/views/cars/formFields.ejs
@@ -1,14 +1,15 @@
 <div class="col-lg-12">
     <div class="form-group">
-        <label for="carBrand" class="required">Car
-            Brand</label>
+        <label for="carBrand" class="required">
+            <%= lingua.car.brand%>
+        </label>
         <% if(allMakes.length == 0) { %>
         <input type="text" id="brand" name="brand" class="form-control mb-3 form-control-lg text-uppercase"
             placeholder="Brand" autofocus required />
         <% } else { %>
         <select id="brand" name="brand" required autofocus onchange="findModel(this.value)"
             class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-            <option value="">Select One</option>
+            <option value=""><%= lingua.selectOne%></option>
             <% for(const make of allMakes) { %>
             <% var selected = (make.Make_Name === car?.brand?.toUpperCase()) ? "selected" : ""; %>
 
@@ -22,26 +23,24 @@
 </div>
 <div class="col-lg-12">
     <div class="form-group">
-        <label for="carModel" class="required">Car Model</label>
+        <label for="carModel" class="required"><%= lingua.car.model%></label>
         <% if(allMakes.length == 0) { %>
         <input type="text" id="carModel" name="model" class="form-control mb-3 form-control-lg text-uppercase"
             placeholder="Model" autofocus required />
         <% } else { %>
         <select id="carModel" name="model" required autofocus
             class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-            <option value="">Select One</option>
-
+            <option value=""><%= lingua.selectOne%></option>
         </select>
         <% } %>
     </div>
 </div>
 <div class="col-lg-12">
     <div class="form-group">
-        <label for="carPlate" class="required">Car
-            Plate</label>
+        <label for="carPlate" class="required"><%= lingua.car.plate%></label>
 
         <input type="text" id="carPlate" name="plate" class="form-control mb-3 form-control-lg text-uppercase"
-            placeholder="Car Plate" autofocus required value="<%= car?.plate%>" />
+            placeholder="<%= lingua.car.plate%>" autofocus required value="<%= car?.plate%>" />
 
         <div id="plateValidationResult"></div>
 
