--- a/views/dashboards/customer.ejs
+++ b/views/dashboards/customer.ejs
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Customer Dashboard </title>
+  <title><%= lingua.dashboard%></title>
   <!-- plugins:css -->
   <link rel="stylesheet" href="./vendors/feather/feather.css">
   <link rel="stylesheet" href="./vendors/mdi/css/materialdesignicons.min.css">
@@ -45,7 +45,7 @@
                   <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item">
                       <a class="nav-link active ps-0" id="profile-tab" data-bs-toggle="tab" href="#plan" role="tab"
-                        aria-selected="true">My Plans</a>
+                        aria-selected="true"><%= lingua.myPlans%></a>
                     </li>
                   </ul>
 
