--- a/views/dashboards/mainDashboard.ejs
+++ b/views/dashboards/mainDashboard.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Auto Care </title>
+    <title><%= lingua.dashboard%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="./vendors/feather/feather.css">
     <link rel="stylesheet" href="./vendors/mdi/css/materialdesignicons.min.css">
@@ -56,7 +56,7 @@
                                         <% if(user?.subscriptions) { %>
                                         <li class="nav-item">
                                             <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#plan"
-                                                role="tab" aria-selected="false">My Plans</a>
+                                                role="tab" aria-selected="false"><%= lingua.myPlans%></a>
                                         </li>
                                         <% } %>
                                     </ul>
