--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Validate Memberships </title>
+    <title><%= lingua.membership.validate%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -43,21 +43,22 @@
                                         <div class="card-body">
                                             <div class="d-sm-flex justify-content-between align-items-start">
                                                 <div>
-                                                    <h4 class="card-title card-title-dash">Validate Memberships</h4>
+                                                    <h4 class="card-title card-title-dash">
+                                                        <%= lingua.membership.validate%></h4>
                                                 </div>
                                             </div>
                                             <br>
                                             <div class="row">
                                                 <div class="col-lg-4 p-3">
                                                     <div class="card p-3">
-                                                        <h5>Read By Camera: </h5>
+                                                        <h5><%= lingua.membership.readyByCamera%>:</h5>
                                                         <div id="resultOfCameraScanLoading"></div>
                                                         <div id="resultOfCameraScan">
                                                             <% if(readingQueue?.length > 0) { %>
                                                             <% for(car of readingQueue) { %>
                                                             <a id="plate-<%= car.plate%>" class="btn btn-link"
                                                                 onclick="setPlateValue('<%= car.plate%>')">
-                                                                Car : <%= car.plate%>
+                                                                <%= lingua.car.name%> : <%= car.plate%>
                                                             </a>
                                                             <br>
                                                             <% } %>
@@ -68,14 +69,14 @@
                                                     </div>
                                                     <br>
                                                     <div class="card p-3">
-                                                        <h5>Manual Input: </h5>
+                                                        <h5><%= lingua.membership.manualInput%>:</h5>
 
                                                         <form id="form-validate-membership" class="pt-3" method="post">
                                                             <div class="row">
                                                                 <div class="col-lg-12">
                                                                     <div class="form-group">
-                                                                        <label class="required" for="name">Plate
-                                                                            Number</label>
+                                                                        <label class="required" for="name">
+                                                                            <%= lingua.car.plateNumber%></label>
                                                                         <input autocomplete="off" type="text"
                                                                             onchange="setInputType('Manual')"
                                                                             id="plateNumber" name="plateNumber"
@@ -91,7 +92,7 @@
                                                                         value="User" />
                                                                     <button id="validateMembershipBtn"
                                                                         class="btn btn-block btn-inverse-dark btn-lg font-weight-medium auth-form-btn float-end"
-                                                                        type="submit">Validate</button>
+                                                                        type="submit"><%= lingua.validate%></button>
                                                                 </div>
                                                             </div>
                                                         </form>
