--- a/views/subscriptions/handleInvalidSubscriptions.ejs
+++ b/views/subscriptions/handleInvalidSubscriptions.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Handle Invalid Memberships</title>
+    <title><%= lingua.membership.handleInvalid%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -47,7 +47,7 @@
                                 <div class="col-12 col-lg-4 col-lg-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <%- include('../partials/subscriptions/information.ejs' , {templateTitle: "Invalid Memberships", subscriptions: invalidSubs, showManageBtn : false, customer : user, showCreateBtn: false}); %>
+                                            <%- include('../partials/subscriptions/information.ejs' , {invalid: true, subscriptions: invalidSubs, showManageBtn : false, customer : user, showCreateBtn: false}); %>
                                         </div>
                                     </div>
                                 </div>
