--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Change Password </title>
+    <title><%= lingua.user.password.changePassword%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -46,7 +46,7 @@
                                 <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <h4>Change Password</h4>
+                                            <h4><%= lingua.user.password.changePassword%></h4>
                                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
                                             <% if(customer) { %>
                                             <form id="form-register" class="pt-3" action="/changePassword?url=<%- url%>"
@@ -55,7 +55,8 @@
                                                 <div class="row">
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="password" class="required">New Password</label>
+                                                            <label for="password"
+                                                                class="required"><%= lingua.user.password.new%></label>
 
                                                             <input value="" type="password" id="password"
                                                                 name="password"
@@ -66,14 +67,15 @@
                                                         </div>
 
                                                         <div id="message">
-                                                            <p>Password must contain the following:</p>
-                                                            <p> <span id="letter" class="invalid"> <b>1 lowercase
-                                                                        letter</b> </span>, <span id="capital"
-                                                                    class="invalid"><b>1 capital (uppercase)
-                                                                        letter</b></span>, <span id="number"
-                                                                    class="invalid"> <b>1 number</b></span>,
+                                                            <p><%= lingua.user.password.passwordRequirement%>:</p>
+                                                            <p> <span id="letter" class="invalid"> <b>1
+                                                                        <%= lingua.user.password.lowerCase%></b>
+                                                                </span>, <span id="capital" class="invalid"><b>1
+                                                                        <%= lingua.user.password.upperCase%></b></span>,
+                                                                <span id="number" class="invalid"> <b>1
+                                                                        <%= lingua.user.password.number%></b></span>,
                                                                 <span id="length" class="invalid"> <b>8
-                                                                        characters</b></span>
+                                                                        <%= lingua.user.password.characters%></b></span>
                                                             </p>
                                                         </div>
                                                     </div>
@@ -81,14 +83,14 @@
                                                 <div class="row">
                                                     <div class="mt-3">
                                                         <a href="<%- url%>"
-                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
+                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end"><%= lingua.cancel%></a>
                                                         <button
                                                             class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                                            type="submit">Save</button>
+                                                            type="submit"><%= lingua.save%></button>
                                                     </div>
                                                 </div>
                                             </form>
-                                            <% }%>
+                                            <% } %>
                                         </div>
                                     </div>
                                 </div>
