--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Edit User </title>
+    <title><%= lingua.user.edit%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -46,7 +46,7 @@
                                 <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <h4>Edit User</h4>
+                                            <h4><%= lingua.user.edit%></h4>
                                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
                                             <% if(customer) { %>
                                             <form id="form-register" class="pt-3" action="/edit-user/?url=<%- url%>"
@@ -56,7 +56,8 @@
                                                     <% if(user.role === roles.ADMIN) { %>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label class="required" for="email">Email</label>
+                                                            <label class="required"
+                                                                for="email"><%= lingua.user.email%></label>
                                                             <input value="<%- customer.email%>" type="email" id="email"
                                                                 name="email" class="form-control form-control-lg"
                                                                 placeholder="example@gmail.com" required />
@@ -65,10 +66,11 @@
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label class="required" for="role">Role</label>
+                                                            <label class="required"
+                                                                for="role"><%= lingua.user.role%></label>
                                                             <select name="role" id="role"
                                                                 class="form-control form-control-lg">
-                                                                <option value="">Select Role</option>
+                                                                <option value=""><%= lingua.selectOne%></option>
                                                                 <% for(const [key, value] of selectRoles) { %>
                                                                 <% var selected = (value == customer.role) ? "selected" : "";   %>
 
@@ -81,28 +83,32 @@
                                                     <% } %>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="firstName" class="required">First Name</label>
+                                                            <label for="firstName"
+                                                                class="required"><%= lingua.user.firstName%></label>
 
                                                             <input value="<%- customer.personalInfo.firstName%>"
                                                                 type="text" id="firstName" name="personalInfo.firstName"
                                                                 class="form-control mb-3 form-control-lg"
-                                                                placeholder="First Name" required autofocus />
+                                                                placeholder="<%= lingua.user.firstName%>" required
+                                                                autofocus />
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="lastName" class="required">Last Name</label>
+                                                            <label for="lastName"
+                                                                class="required"><%= lingua.user.lastName%></label>
 
                                                             <input value="<%- customer.personalInfo.lastName%>"
                                                                 type="text" id="lastName" name="personalInfo.lastName"
                                                                 class="form-control mb-3 form-control-lg"
-                                                                placeholder="LastName" required autofocus />
+                                                                placeholder="<%= lingua.user.lastName%>" required
+                                                                autofocus />
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="phoneNumber" class="required">Phone
-                                                                Number</label>
+                                                            <label for="phoneNumber"
+                                                                class="required"><%= lingua.user.phoneNumber%></label>
 
                                                             <input value="<%- customer.personalInfo.phoneNumber%>"
                                                                 type="tel" id="phoneNumber"
@@ -113,8 +119,8 @@
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="dateOfBirth" class="required">Date Of
-                                                                Birth</label>
+                                                            <label for="dateOfBirth"
+                                                                class="required"><%= lingua.user.dateOfBirth%></label>
 
                                                             <input
                                                                 value="<%- moment(customer.personalInfo.dateOfBirth).utc().format('YYYY-MM-DD')%>"
@@ -126,10 +132,11 @@
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <div class="form-group">
-                                                            <label for="city" class="required">City</label>
+                                                            <label for="city"
+                                                                class="required"><%= lingua.user.city%></label>
                                                             <select id="city" name="personalInfo.city" required
                                                                 class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-                                                                <option value="">Select One</option>
+                                                                <option value=""><%= lingua.selectOne%></option>
                                                                 <% for(const municipality of municipalities) { %>
                                                                 <% var selected = (customer?.personalInfo?.city == municipality) ? "selected" : "";   %>
                                                                 <option value="<%= municipality%>" <%= selected%>>
@@ -143,16 +150,16 @@
                                                 <div class="row">
                                                     <div class="mt-3">
                                                         <a href="<%- url%>"
-                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end">Cancel</a>
+                                                            class="btn btn-block btn-light btn-lg font-weight-medium auth-form-btn float-end"><%= lingua.cancel%></a>
 
                                                         <button
                                                             class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
-                                                            type="submit">Save</button>
+                                                            type="submit"><%= lingua.save%></button>
                                                     </div>
                                                 </div>
                                             </form>
 
-                                            <% }%>
+                                            <% } %>
                                         </div>
                                     </div>
                                 </div>
