--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Users </title>
+    <title><%= lingua.user.users%></title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../vendors/feather/feather.css">
     <link rel="stylesheet" href="../vendors/mdi/css/materialdesignicons.min.css">
@@ -46,13 +46,12 @@
                                         <div class="card-body">
                                             <div class="d-sm-flex justify-content-between align-items-start">
                                                 <div>
-                                                    <h4 class="card-title card-title-dash">Users</h4>
+                                                    <h4 class="card-title card-title-dash"><%= lingua.user.users%></h4>
                                                 </div>
                                                 <div>
                                                     <a href="/create-user" class="btn btn-primary btn-icon-text"
                                                         type="button"><i
-                                                            class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add
-                                                        User</a>
+                                                            class="mdi mdi-map-marker-plus btn-icon-prepend"></i><%= lingua.user.add%></a>
                                                 </div>
                                             </div>
                                             <br>
@@ -60,12 +59,12 @@
                                                 <table id="users" class="table table-hover stripe">
                                                     <thead>
                                                         <tr>
-                                                            <th>Name</th>
-                                                            <th>Role</th>
-                                                            <th>Email</th>
-                                                            <th>Phone</th>
+                                                            <th><%= lingua.user.name%></th>
+                                                            <th><%= lingua.user.role%></th>
+                                                            <th><%= lingua.user.email%></th>
+                                                            <th><%= lingua.user.phoneNumber%></th>
                                                             <!-- <th>Plan</th> -->
-                                                            <th>Action</th>
+                                                            <th><%= lingua.action%></th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
